# partiql-smithy

./: .gitignore  README.md
anodizer/: .gitignore  README.md  settings.gradle.kts
anodizer/anodizer/: README.md  build.gradle.kts
anodizer/anodizer-core/: build.gradle.kts
anodizer/anodizer-lang/: build.gradle.kts
anodizer/anodizer-target-codegen/: build.gradle.kts
anodizer/anodizer-target/anodizer-target-isl/: build.gradle.kts
anodizer/anodizer-target/anodizer-target-kotlin/: README.md  build.gradle.kts
anodizer/anodizer-target/anodizer-target-rust/src/runtime/anodizer-runtime-rust/: Cargo.toml  README.md
anodizer/anodizer-target/anodizer-target-rust/src/runtime/anodizer-runtime-rust/src/: arena.rs  example.rs  lib.rs  reader.rs  result.rs  test.rs  writer.rs
anodizer/buildSrc/: build.gradle.kts
anodizer/examples/models/: kitchen.ridl
anodizer/examples/smithy-anodizer-example-kotlin-aws/: README.md  build.gradle.kts  (+1 more)
anodizer/gradle/: libs.versions.toml
docs/: IDL.html  Makefile  interface.adoc  interface.html  model.html  navigation.adoc  navigation.html  serialization.adoc  serialization.html  types.html
model/: core.smithy  operator.smithy  pdbs.smithy  service.smithy
partiql-plan-kotlin/: README.adoc  build.gradle.kts  gradle.properties  settings.gradle.kts
spec/: IDL.adoc  interface.adoc  model.adoc  navigation.adoc  stylesheet.css  types.adoc
specification/: RIDL.adoc  model.adoc  types.adoc
tool/: README.md
tool/ridl/: build.gradle.kts  settings.gradle.kts  test.ridl
tool/sprout/: build.gradle.kts  settings.gradle.kts
(+325 files in other folders)
