[package]
name = "ridl_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.10"
derive-new = "0.5"
ion-rs = "0.18"
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1.4.0"
rstest = "0.15"